--- a/rtdetrv2_pytorch/configs/dataset/coco_detection.yml
+++ b/rtdetrv2_pytorch/configs/dataset/coco_detection.yml
@@ -10,16 +10,16 @@ evaluator:
 # num_classes: 91
 # remap_mscoco_category: False
 
-num_classes: 80
-remap_mscoco_category: True
+num_classes: 51
+remap_mscoco_category: False
 
 
 train_dataloader: 
   type: DataLoader
   dataset: 
     type: CocoDetection
-    img_folder: ./dataset/coco/train2017/
-    ann_file: ./dataset/coco/annotations/instances_train2017.json
+    img_folder: C:\Users\fur\PycharmProjects\DINO\radarv8_cocostyle\train2017
+    ann_file: C:\Users\fur\PycharmProjects\DINO\radarv8_cocostyle\annotations\instances_train2017.json
     return_masks: False
     transforms:
       type: Compose
@@ -35,8 +35,8 @@ val_dataloader:
   type: DataLoader
   dataset: 
     type: CocoDetection
-    img_folder: ./dataset/coco/val2017/
-    ann_file: ./dataset/coco/annotations/instances_val2017.json
+    img_folder: C:\Users\fur\PycharmProjects\DINO\radarv8_cocostyle\val2017
+    ann_file: C:\Users\fur\PycharmProjects\DINO\radarv8_cocostyle\annotations\instances_val2017.json
     return_masks: False
     transforms:
       type: Compose
